@@ -20,10 +20,12 @@ module Fairy
 
   CONF.N_MOD_GROUP_BY = 5
   CONF.HASH_MODULE = "share/hash-md5"
-  CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:policy => :OnMemoryBuffer}
+  CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
 
   CONF.VF_ROOT = CONF.HOME+"/test/Repos"
   CONF.VF_PREFIX = `hostname`.chomp
+
+  CONF.TMP_DIR = "/tmp/fairy/tmpbuf"
 
   CONF.LOG_FILE = "/tmp/fairy/log"
   CONF.LOG_FLUSH_INTERVAL = 1
